resolves issue where text would overlap with use my location #231

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -540,4 +540,7 @@ i {
   font-style: italic;
 }
 
+.w4-5 {
+  width: 12rem;
+}
 /* END of Default styling for the static content html on static pages */
